Implement sign in and sign out

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGO_URI=mongodb+srv://admin:Diosmeama16mo@myfirstcluster.ucrkv.mongodb.net/nodeapi?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://admin:secret_password@myfirstcluster.ucrkv.mongodb.net/nodeapi?retryWrites=true&w=majority
 PORT=8080
+JWT_SECRET=SUPERSECRETJWT_SECRET
