--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parse": "^0.1.0",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^5.3.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
