--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-jwt": "^6.0.0",
     "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
+    "loadash": "^1.0.0",
     "mongoose": "^5.10.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
