--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "express-validator": "^5.3.1",
+    "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
     "loadash": "^1.0.0",
     "mongoose": "^5.10.0",
